samples/_failures_safe/1761194432_40eec0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b924eaa6.c: In function ‘main’:
./samples/SAFE/__tmp_b924eaa6.c:160:5: error: expected identifier or ‘(’ at end of input
  160 |     Token
      |     ^~~~~
./samples/SAFE/__tmp_b924eaa6.c:160:5: error: expected declaration or statement at end of input
